# TinyEngine

./: CMakeLists.txt  LICENSE
BaseLib/: CMakeLists.txt
BaseLib/include/: TinyAssert.h  TinyLog.h
BaseLib/src/: BaseLib.cpp  TinyLog.cpp
GLobal/: CMakeLists.txt
GLobal/include/: Global.h  GlobalDefine.h  GlobalExport.h  SingletonObject.h
GLobal/src/: Global.cpp
Infrastructure/: CMakeLists.txt
Infrastructure/include/: AiLog.h  BaseLibExport.h  CommanMacroDef.h  ContainerDefine.h  GlobalSingleton.h  ReferenceCountObject.h  TinyAssert.h  TinyCommon.h  TinyNewDelete.h
Infrastructure/src/: AiLog.cpp  GlobalSingleton.cpp
TestConsole/: CMakeLists.txt  main.cpp
